--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 
 <h1 style="font-family: 'Josefin Sans', sans-serif;">This is a heading
   <title> Hi I'm Elise Young, welcome to my crib. </title>
-</h1>>
+</h1>
  
-
 <h2>
 Home Life Food Travel
 </h2>
 
 <body>
+  <div>
   <iframe src="https://giphy.com/embed/j3gsT2RsH9K0w" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/j3gsT2RsH9K0w">via GIPHY</a></p>
+ </div>
 </body>
  
   
