--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
  </div>
 
-<h1 style="font-family: 'Josefin Sans', sans-serif;">This is a heading
-  <title> Hi I'm Elise Young, welcome to my crib. </title>
-</h1>
- 
-<h2>
-Home Life Food Travel
+<h1 style="text-align:center;font-size:300%;font-family:'Josefin Sans',sans-serif;">Hi I'm Elise Young, welcome to my crib.</h1>
+
+<h2 style="text-align:center;font-size:200%;font-family:'Josefin Sans',sans-serif;"<Home Life Food Travel>
 </h2>
 
 <body>
   <div>
   <iframe src="https://giphy.com/embed/j3gsT2RsH9K0w" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/j3gsT2RsH9K0w">via GIPHY</a></p>
+<p1>
+ Daily Inspiration
+</p1>
+<iframe src="https://giphy.com/embed/ihBQKvIE7gLEA" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/game-mrw-ihBQKvIE7gLEA">via GIPHY</a></p>  
  </div>
 </body>
  
