--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 
 <html>
- <div>
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
- </div>
 
+<head>
 <h1 style="text-align:center;font-size:300%;font-family:'Josefin Sans',sans-serif;">Hi I'm Elise Young, welcome to my crib.</h1>
 
 <h2 style="text-align:center;font-size:200%;font-family:'Josefin Sans',sans-serif;"<Home Life Food Travel</h2>
+ </head>
 
 <body>
 <div>
@@ -15,6 +14,5 @@
 <iframe src="https://giphy.com/embed/ihBQKvIE7gLEA" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/game-mrw-ihBQKvIE7gLEA">via GIPHY</a></p>  
  </div>
 </body>
- 
   
 </html>
