--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div>
    <iframe src="https://giphy.com/embed/j3gsT2RsH9K0w" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/j3gsT2RsH9K0w">via GIPHY</a></p>
-   <p1>Daily Inspiration</p1>
+   <p>Daily Inspiration</p>
    <iframe src="https://giphy.com/embed/ihBQKvIE7gLEA" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/game-mrw-ihBQKvIE7gLEA">via GIPHY</a></p>  
  </div>
 </body>
