--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <center>
 <div>
    <iframe src="https://giphy.com/embed/j3gsT2RsH9K0w" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/j3gsT2RsH9K0w">via GIPHY</a></p>
    <p>Daily Inspiration</p>
