--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <center>
     <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="news.html">News</a>
+  <a href="contact.html">Contact</a>
+  <a href="aboutJanice.html">About Janice</a>
 </div>
 <div>
    <iframe src="https://giphy.com/embed/j3gsT2RsH9K0w" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/j3gsT2RsH9K0w">via GIPHY</a></p>
