--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <h1 style="text-align:center;font-size:300%;font-family:Josefin Sans,sans-serif;">Hi I'm Elise Young, welcome to my crib.</h1>
-  <h2 style="text-align:center;font-size:200%;font-family:Josefin Sans,sans-serif;">Home Life Food Travel</h2>
+  <h1 style="text-align:center;font-size:300%;font-family:'Josefin Sans',sans-serif;">Hi I'm Elise Young, welcome to my crib.</h1>
 </head>
 
 <body>
