--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div>
    <iframe src="https://giphy.com/embed/j3gsT2RsH9K0w" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/j3gsT2RsH9K0w">via GIPHY</a></p>
-   <p>Daily Inspiration</p>
+   <h2>Daily Inspiration</h2>
    <iframe src="https://giphy.com/embed/ihBQKvIE7gLEA" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/game-mrw-ihBQKvIE7gLEA">via GIPHY</a></p>  
  </div>
 </body>
