--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -1,5 +1,5 @@
 <html>
-
+<body style="background-color:powderblue;">
 <head>
   <title style="font-family:Lobster,cursive;">Elise and Janice</title>
 </head>
