--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -6,7 +6,12 @@
 
 <body>
   <center>
-  
+      <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="news.html">News</a>
+  <a href="contact.html">Contact</a>
+  <a href="aboutJanice.html">About Janice</a>
+</div>
   <h1 style="font-family:'Josefin Sans',sans-serif;"> Janice! </h1>
   <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A! Her favorite tv show is The Office and she loves competitive baking shows.</h2> 
   <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS">via GIPHY</a></p>
