--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -14,7 +14,17 @@
   <a href="aboutJanice.html">About Janice</a>
 </div>
   <h1 style="font-family:'Josefin Sans',sans-serif;"> Janice! </h1>
-  <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A! Her favorite tv show is The Office and she loves competitive baking shows. She used to cheer, like hardcore cheer. She loves cats, plays the cello, and her favorite food is Tex Mex!</h2> 
+  <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
+ 
+  <ul>
+    <li>Her favorite tv show is The Office.</li>
+    <li>She loves competitive baking shows.</li>
+    <li>She loves cats.</li>
+    <li>She used to cheer, like hardcore cheer.</li>
+    <li>She plays the cello.</li>
+    <li<Her favorite food is Tex Mex</li>
+  </ul>
+    
   <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS">via GIPHY</a></p>
   <iframe src="https://giphy.com/embed/26BRKVjKt826nuxC8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/pbs-great-british-baking-show-bake-off-bake-off-26BRKVjKt826nuxC8">via GIPHY</a></p>
   <iframe src="https://giphy.com/embed/5CR5KURI0fTEI" width="401" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cheer-5CR5KURI0fTEI">via GIPHY</a></p>
