--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <center>
     <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="news.html">News</a>
   <a href="contact.html">Contact</a>
   <a href="aboutJanice.html">About Janice</a>
