--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -13,9 +13,25 @@
   <a href="contact.html">Contact</a>
   <a href="aboutJanice.html">About Janice</a>
 </div>
-  <h1 style="font-family:'Josefin Sans',sans-serif;"> Janice! </h1>
+  <h1 style="font-family:'Josefin Sans',sans-serif;"> Meet Janice! </h1>
   <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
  
+{
+      display: inline-block;
+      margin-left: auto;
+      margin-right: auto;
+   }
+.text-center {
+   text-align: center;
+}
+ul.text-center {
+   list-style-position: inside;
+   padding-left: inherit; /*Get rid of padding to center correctly*/
+}
+   ul.text-center > li::before {
+       content: "\A";
+       white-space: pre;
+   }
   <ul>
     <li>Her favorite tv show is The Office.</li>
     <li>She loves competitive baking shows.</li>
@@ -31,5 +47,39 @@
   <iframe src="https://giphy.com/embed/p92Pip4uIcuGY" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/netflix-and-chill-p92Pip4uIcuGY">via GIPHY</a></p> 
   <iframe src="https://giphy.com/embed/6VoDJzfRjJNbG" width="480" height="329" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cat-6VoDJzfRjJNbG">via GIPHY</a></p>
     
+  <h3>She has been to:</h3>
+  <ol>
+    <li>She has been to Korea</li>
+    <li>She has been to China</li>
+    <li>She has been to Japan</li>
+    <li>She has been to Canada</li>
+  </ol>
+  {
+      display: inline-block;
+      margin-left: auto;
+      margin-right: auto;
+   }
+.text-center {
+   text-align: center;
+}
+ol.text-center {
+   list-style-position: inside;
+   padding-left: inherit; /*Get rid of padding to center correctly*/
+}
+   ol.text-center > li::before {
+       content: "\A";
+       white-space: pre;
+   }
+  
+  <h4>Janice LOVES Buzzfeed</h4>
+ <a href= "https://www.buzzfeed.com/?utm_term=.kxd2kZVre#.il58v3zZA">
+<img border="0" alt="Buzzfeed" src="" width="300" height="400">
+</a>
+  
+  <h5>Her favorite artist is Billie Eilish!</h5>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/gBRi6aZJGj4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  
+  
+  
     </body>
  </html>
