--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -38,7 +38,7 @@ ul.text-center {
     <li>She loves cats.</li>
     <li>She used to cheer, like hardcore cheer.</li>
     <li>She plays the cello.</li>
-    <li<Her favorite food is Tex Mex</li>
+    <li>Her favorite food is Tex Mex</li>
   </ul>
     
   <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS">via GIPHY</a></p>
@@ -73,7 +73,7 @@ ol.text-center {
   
   <h4>Janice LOVES Buzzfeed</h4>
  <a href= "https://www.buzzfeed.com/?utm_term=.kxd2kZVre#.il58v3zZA">
-<img border="0" alt="Buzzfeed" src="" width="300" height="400">
+<img border="0" alt="Buzzfeed" src="BuzzFeed.svg.png" width="300" height="400">
 </a>
   
   <h5>Her favorite artist is Billie Eilish!</h5>
