--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -17,7 +17,7 @@
   <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
  
 
-  <ul>
+  <ul style="font-family: 'Raleway',sans-serif; font-size:15px">
     <li>Her favorite tv show is The Office.</li>
     <li>She loves competitive baking shows.</li>
     <li>She loves cats.</li>
@@ -42,8 +42,8 @@
  
   
   <h4>Janice LOVES Buzzfeed</h4>
- <a href= "https://www.buzzfeed.com/?utm_term=.kxd2kZVre#.il58v3zZA">
-<img border="0" alt="Buzzfeed" src="BuzzFeed.svg.png" width="300" height="400">
+ <a href= "https://www.chuys.com">
+<img border="0" alt="Buzzfeed" src="chuys.jpg" width="300" height="400">
 </a>
   
   <h5>Her favorite artist is Billie Eilish!</h5>
