--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -16,7 +16,7 @@
   <h1 style="font-family:'Josefin Sans',sans-serif;"> Meet Janice! </h1>
   <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
  
-
+<div class="interests">
   <ul style="font-family: 'Raleway',sans-serif; font-size:15px">
     <li>Her favorite tv show is The Office.</li>
     <li>She loves competitive baking shows.</li>
@@ -25,6 +25,7 @@
     <li>She plays the cello.</li>
     <li>Her favorite food is Tex Mex</li>
   </ul>
+ </div>
     
   <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS">via GIPHY</a></p>
   <iframe src="https://giphy.com/embed/26BRKVjKt826nuxC8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/pbs-great-british-baking-show-bake-off-bake-off-26BRKVjKt826nuxC8">via GIPHY</a></p>
@@ -43,7 +44,7 @@
   
   <h4>Janice LOVES Buzzfeed</h4>
  <a href= "https://www.chuys.com">
-<img border="0" alt="Buzzfeed" src="chuys.jpg" width="300" height="400">
+<img border="0" alt="Buzzfeed" src="chuys.jpg" width="50%" height="50%">
 </a>
   
   <h5>Her favorite artist is Billie Eilish!</h5>
