--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:turquoise;">
+<body style="background: linear-gradient(to bottom right, pink, lightblue);">
 <head>
   <link rel="stylesheet" type="text/css" href="main.css">
   <title style="font-family:Lobster,cursive;">Elise and Janice</title>
