--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -34,7 +34,7 @@
   <iframe src="https://giphy.com/embed/6VoDJzfRjJNbG" width="480" height="329" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cat-6VoDJzfRjJNbG">via GIPHY</a></p>
     
   <h3>She has been to:</h3>
-  <ol>
+  <ol class="center">
     <li>She has been to Korea</li>
     <li>She has been to China</li>
     <li>She has been to Japan</li>
