--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -1,11 +1,12 @@
 <html>
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Raleway" rel="stylesheet">
 <body style="background: linear-gradient(to bottom right, pink, lightblue);">
 <head>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title style="font-family:Lobster,cursive;">Elise and Janice</title>
 </head>
 
 <body>
+  
   <center>
       <div class="topnav">
   <a class="active" href="#home">Home</a>
@@ -13,11 +14,12 @@
   <a href="contact.html">Contact</a>
   <a href="aboutJanice.html">About Janice</a>
 </div>
-  <h1 style="font-family:'Josefin Sans',sans-serif;"> Meet Janice! </h1>
-  <h2> Janice is 16 and is from Livingston, NJ. She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
+  <h1 style="font-family:'Abril Fatface', cursive;"> Meet Janice! </h1>
+  <h2 style=font-family:'Raleway',sans-serif;"> Janice is 16 and is from Livingston, NJ. 
+   She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
  
-
-  <ul style="font-family: 'Raleway',sans-serif; font-size:15px">
+<div>BACKLIGHT</div>
+  <ul style="font-family:'Raleway',sans-serif; font-size:15px">
     <li>Her favorite tv show is The Office.</li>
     <li>She loves competitive baking shows.</li>
     <li>She loves cats.</li>
@@ -33,7 +35,7 @@
   <iframe src="https://giphy.com/embed/p92Pip4uIcuGY" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/netflix-and-chill-p92Pip4uIcuGY">via GIPHY</a></p> 
   <iframe src="https://giphy.com/embed/6VoDJzfRjJNbG" width="480" height="329" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cat-6VoDJzfRjJNbG">via GIPHY</a></p>
     
-  <h3>She has been to:</h3>
+  <h3 class=.bodyJaniceClass>She has been to:</h3>
   <ol class="center">
     <li>She has been to Korea</li>
     <li>She has been to China</li>
@@ -42,14 +44,13 @@
   </ol>
  
   
-  <h4>Janice LOVES Buzzfeed</h4>
+  <h4 class=.bodyJaniceClass>Janice LOVES Chuys!</h4>
  <a href= "https://www.chuys.com">
 <img border="0" alt="Buzzfeed" src="chuys.jpg" width="50%" height="50%">
 </a>
   
-  <h5>Her favorite artist is Billie Eilish!</h5>
+  <h5 class=.bodyJaniceClass>Her favorite artist is Billie Eilish!</h5>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/gBRi6aZJGj4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  
   
   
     </body>
