--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -18,15 +18,15 @@
   <h2 style=font-family:'Raleway',sans-serif;"> Janice is 16 and is from Livingston, NJ. 
    She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
  
-<div>BACKLIGHT</div>
-  <ul style="font-family:'Raleway',sans-serif; font-size:15px">
+<div><ul
     <li>Her favorite tv show is The Office.</li>
     <li>She loves competitive baking shows.</li>
     <li>She loves cats.</li>
     <li>She used to cheer, like hardcore cheer.</li>
     <li>She plays the cello.</li>
     <li>Her favorite food is Tex Mex</li>
-  </ul>
+  </ul></div>
+
 
     
   <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS">via GIPHY</a></p>
