--- a/aboutJanice.html
+++ b/aboutJanice.html
@@ -7,14 +7,13 @@
 
 <body>
   
-  <center>
-      <div class="topnav">
+  <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="news.html">News</a>
   <a href="contact.html">Contact</a>
   <a href="aboutJanice.html">About Janice</a>
 </div>
-  <h1 style="font-family:'Abril Fatface', cursive;"> Meet Janice! </h1>
+  <h1 style="font-family:'Abril Fatface', cursive; align:center"> Meet Janice! </h1>
   <h2 style=font-family:'Raleway',sans-serif;"> Janice is 16 and is from Livingston, NJ. 
    She helped TA at Kode with Klossy in Dallas. Janice is currently going into her junior year in high school and is going to take AP Computer Science A!</h2> 
  
@@ -25,15 +24,15 @@
     <li>She used to cheer, like hardcore cheer.</li>
     <li>She plays the cello.</li>
     <li>Her favorite food is Tex Mex</li>
-  </ul></div>
+ </ul></div>
 
 
     
-  <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS">via GIPHY</a></p>
-  <iframe src="https://giphy.com/embed/26BRKVjKt826nuxC8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/pbs-great-british-baking-show-bake-off-bake-off-26BRKVjKt826nuxC8">via GIPHY</a></p>
-  <iframe src="https://giphy.com/embed/5CR5KURI0fTEI" width="401" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cheer-5CR5KURI0fTEI">via GIPHY</a></p>
-  <iframe src="https://giphy.com/embed/p92Pip4uIcuGY" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/netflix-and-chill-p92Pip4uIcuGY">via GIPHY</a></p> 
-  <iframe src="https://giphy.com/embed/6VoDJzfRjJNbG" width="480" height="329" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cat-6VoDJzfRjJNbG">via GIPHY</a></p>
+  <iframe src="https://giphy.com/embed/uXXPhr8D6HSXS" width="480" height="271" position:relative left:frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tackle-the-office-hug-uXXPhr8D6HSXS"></a></p>
+  <iframe src="https://giphy.com/embed/26BRKVjKt826nuxC8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/pbs-great-british-baking-show-bake-off-bake-off-26BRKVjKt826nuxC8"></a></p>
+  <iframe src="https://giphy.com/embed/5CR5KURI0fTEI" width="401" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cheer-5CR5KURI0fTEI"></a></p>
+  <iframe src="https://giphy.com/embed/p92Pip4uIcuGY" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/netflix-and-chill-p92Pip4uIcuGY"></a></p> 
+  <iframe src="https://giphy.com/embed/6VoDJzfRjJNbG" width="480" height="329" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cat-6VoDJzfRjJNbG"></a></p>
     
   <h3 class=.bodyJaniceClass>She has been to:</h3>
   <ol class="center">
